UI/Collapsible: defaultPrevented handling updated for details / summary elements (fixes broken UI/Dropdown hosted within UI/Collapsible)

--- a/UI/Collapsible/Collapsible.scss
+++ b/UI/Collapsible/Collapsible.scss
@@ -183,6 +183,10 @@
 		
 	}
 	
+	&--hidden {
+		display: none !important;
+	}
+
 	&:last-child {
 
 		#{$collapsible}-summary,
